compliles and runs. Had to comment out a lot of stuff. go back to me to restore a lot of robot functionality